# Loom

./: .gitignore  CONTRIBUTING.md  README.md  VALIDATION_TODO.md  change_tracking.py  cli.py  codestore.py  core_tools.py  debug_tools.py  detection_tools.py  failure_log_storage.py  failure_tools.py  graph_tools.py  ingestion.py  knowledge_tools.py  loom  loom_base.py  loom_pytest_plugin.py  loom_tools.py  note_storage.py  pyproject.toml  schema.py  todo_storage.py  todo_tools.py  trace_storage.py  tracer.py  validation.py
.claude/skills/loom/: README.md  SKILL.md
claude_skills/: README.md
claude_skills/.claude/: CLAUDE.md
claude_skills/.claude/commands/: loom-about.md  loom-architecture.md  loom-attempted-fixes.md  loom-callers.md  loom-central.md  loom-class.md  loom-clusters.md  loom-debug.md  loom-extract.md  loom-failure-log.md  loom-help.md  loom-hypothesis.md  loom-impact.md  loom-ingest.md  loom-intent.md  loom-last-failure.md  loom-module.md  loom-note.md  loom-orphans.md  loom-path.md  loom-resolve.md  loom-search-notes.md  loom-stats.md  loom-test.md  loom-tests.md  loom-todo-add.md  loom-todo-done.md  loom-todo-list.md  loom-todo-next.md  loom-todo-stats.md  loom-understand.md  loom-validate.md
parsers/: __init__.py  actionscript3_parser.py  base.py  cpp_parser.py  html_parser.py  js_ts_parser.py  python_parser.py  registry.py
tests/: conftest.py  test_analysis.py  test_call_graph.py  test_change_detection.py  test_failure_tracking.py  test_imports_query.py  test_ingest.py  test_methods.py  test_notes.py  test_todo_system.py  test_trace.py  test_tracer.py
tests/fixtures/cpp/: simple_class.cpp  simple_class.h  unreal_character.h
tests/fixtures/javascript/: api.js  index.js  utils.js
tests/fixtures/python/: simple_module.py  syntax_error.py
tests/fixtures/python/analysis/: __init__.py  caller_callee.py  importable_module.py  imports_example.py
tests/fixtures/python/call_analysis/: __init__.py  callee.py  caller.py
tests/fixtures/python/import_analysis/: __init__.py  consumer.py  core.py  utils.py
tests/fixtures/typescript/: types.ts
tests/integration/: test_failure_tracking.py  test_todo_system.py
tests/parsers/: test_cpp_parser.py  test_javascript_parser.py  test_js_ts_parser.py  test_python_parser.py  test_typescript_parser.py
tests/parsers/legacy/: javascript_parser.py  typescript_parser.py
(+5 files in other folders)
