[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loom-code"
version = "0.1.0"
description = "Code understanding toolkit for AI agents - semantic analysis, call graphs, and debugging context"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["code-analysis", "ai", "claude", "tree-sitter", "ast", "static-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Code Analyzers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.optional-dependencies]
javascript = [
    "tree-sitter>=0.21.0",
    "tree-sitter-javascript>=0.21.0",
    "tree-sitter-typescript>=0.21.0",
]
cpp = [
    "tree-sitter>=0.21.0",
    "tree-sitter-cpp>=0.21.0",
]
all-languages = [
    "tree-sitter>=0.21.0",
    "tree-sitter-javascript>=0.21.0",
    "tree-sitter-typescript>=0.21.0",
    "tree-sitter-cpp>=0.21.0",
]
embeddings = ["sentence-transformers>=2.2.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]
all = [
    "loom-code[all-languages,embeddings,dev]",
]

[project.scripts]
loom = "cli:main"

[project.urls]
Homepage = "https://github.com/anthropics/loom"
Documentation = "https://github.com/anthropics/loom#readme"
Issues = "https://github.com/anthropics/loom/issues"

[tool.hatch.build.targets.wheel]
include = [
    "*.py",
    "parsers/*.py",
    "loom",
]
exclude = [
    "tests/",
]

[tool.hatch.build.targets.sdist]
include = [
    "*.py",
    "parsers/",
    "loom",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]
exclude = [
    "tests/",
    ".github/",
    "docs/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]
ignore = ["E501"]  # Line too long - handled by formatter

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
